# rainbow-token-connector

./: .catalog-info.yaml  .gitignore  .gitmodules  CODEOWNERS  Makefile  README.md  docker-compose.yml  index.js  package-lock.json  package.json  rust-toolchain
.buildkite/: pipeline.yml
.github/workflows/: security-analysis.yml  sigma-prime.yml  tests.yml
async-aurora/: Cargo.toml  build.sh
async-aurora/src/: lib.rs
aurora-engine-parameters/: Cargo.toml
aurora-engine-parameters/src/: lib.rs
bridge-aurora-token-factory/: Cargo.toml  build.sh  rust-toolchain
bridge-aurora-token-factory/src/: lib.rs
bridge-aurora-token-factory/tests/: token_transfer.rs
bridge-common/: .catalog-info.yaml  Cargo.toml  rust-toolchain
bridge-common/src/: lib.rs  prover.rs  result_types.rs
bridge-token/: .catalog-info.yaml  Cargo.toml  build.sh
bridge-token-factory/: .catalog-info.yaml  Cargo.toml  build.sh  readme.md
bridge-token-factory/res/: bridge_token_factory_v0.1.6.wasm  locked_events.json
bridge-token-factory/src/: fee.rs  lib.rs  lock_event.rs  log_metadata_event.rs  migration.rs  prover.rs  types.rs  unlock_event.rs
bridge-token-factory/tests/: event_serialization.rs  fee_tests.rs  token_transfer.rs
bridge-token/src/: lib.rs
erc20-bridge-token/: .catalog-info.yaml  .env  .eslintrc.json  .gitignore  .prettierrc.json  build.sh  dist.sh  hardhat.config.js  package-lock.json  package.json  truffle-config.js
erc20-bridge-token/cache/: solidity-files-cache.json
erc20-bridge-token/contracts/: Borsh.sol  BridgeToken.sol  BridgeTokenFactory.sol  BridgeTokenProxy.sol  ERC20Locker.sol  IProofConsumer.sol  Locker.sol  Migrations.sol  ProofConsumer.sol  ResultsDecoder.sol  SelectivePausableUpgradable.sol  TestBridgeToken.sol
erc20-bridge-token/contracts/test/: NearProverMock.sol  TestBridgeToken.sol
erc20-bridge-token/scripts/: deploy-factory-impl.js  deploy-factory.js  deploy-proof-consumer.js  deploy-token-impl.js  deploy-token-upgrade.js  test.sh  upgrade-factory.js
erc20-bridge-token/test/: BridgeToken.js  helpers.js  proof_template.json  signatures.js
erc20-bridge-token/utils/: deposit-ft.js  eth-proof.js  near-locker.js  near-proof.js  withdraw-ft.js
erc20-connector/: .catalog-info.yaml  build.sh  dist.sh  hardhat.config.js  main.js  package.json  truffle-config.js
erc20-connector/contracts/: AccountIds.sol  AdminControlled.sol  AuroraERC20Locker.sol  BridgeToken.sol  BridgeTokenFactory.sol  ERC20Locker.sol  Locker.sol  Migrations.sol  ProofKeeper.sol
erc20-connector/contracts/migrations/: ERC20LockerAdmin.sol
erc20-connector/contracts/test/: NearProverMock.sol  TToken.sol
erc20-connector/scripts/: test.sh
erc20-connector/test/: TokenLocker.js  UpdateProver.js  proof_template.json
erc20locker/: dist.sh  package.json
erc20locker/contracts/: ERC20Locker.sol  TokenLocker.sol
erc20locker/test/: TokenLocker.js
metadata-connector/: hardhat.config.js  package-lock.json  package.json
metadata-connector/contracts/: ERC20MetadataLogger.sol
metadata-connector/contracts/test/: SampleERC20.sol
metadata-connector/scripts/: deploy.js
metadata-connector/test/: ERC20MetadataLogger.test.js
mock-prover/: Cargo.toml  build.sh
mock-prover/src/: lib.rs
native-erc20-connector/: build.sh  dist.sh  package.json
native-erc20-connector/contracts/: AuroraERC20Locker.sol
res/: AccountIds.full.abi  AccountIds.json  AdminControlled.full.abi  AuroraERC20Locker.full.abi  AuroraERC20Locker.hex  AuroraERC20Locker.json  BridgeToken.full.abi  BridgeToken.json  BridgeTokenFactory.full.abi  BridgeTokenFactory.json  BridgeTokenProxy.json  ERC20Locker.full.abi  ERC20Locker.json  ERC20MetadataLogger.json  IProofConsumer.json  Locker.full.abi  Locker.json  Migrations.json  NearProverMock.json  ProofConsumer.json  ProofKeeper.full.abi  ResultsDecoder.json  SelectivePausableUpgradable.json  TToken.full.abi  TToken.json  bridge_aurora_token_factory.wasm  bridge_token.wasm  bridge_token_factory.wasm  bridge_token_no_icon.wasm  mainnet-test.wasm  mock_prover.wasm  rainbow_bridge_near_token_locker.wasm  test_token.wasm
silo-to-silo/: .catalog-info.yaml  .gitignore  .prettierrc.json  Makefile  hardhat.config.js  package.json
silo-to-silo/.openzeppelin/: unknown-1313161554.json  unknown-1313161560.json
silo-to-silo/configs/: aurora-mainnet.json  aurora-testnet.json  enpower-mainnet.json  enpower-silo-testnet.json
silo-to-silo/contracts/: SiloToSilo.sol  foundry.toml
silo-to-silo/contracts/src/: IEvmErc20.sol  SiloToSilo.sol
silo-to-silo/integration-tests/: Cargo.toml  rust-toolchain
silo-to-silo/integration-tests/aurora-sdk-integration-tests/: Cargo.toml
silo-to-silo/integration-tests/aurora-sdk-integration-tests/res/: ERC20PresetMinterPauser.abi
silo-to-silo/integration-tests/aurora-sdk-integration-tests/src/: lib.rs  nep141.rs  wnear.rs
silo-to-silo/integration-tests/aurora-sdk-integration-tests/src/aurora_engine/: erc20.rs  mod.rs  repo.rs
silo-to-silo/integration-tests/aurora-sdk-integration-tests/src/tests/: mod.rs
silo-to-silo/integration-tests/aurora-sdk-integration-tests/src/utils/: cargo.rs  ethabi.rs  forge.rs  git.rs  mod.rs  process.rs
silo-to-silo/integration-tests/mock_token/: Cargo.toml  rust-toolchain
silo-to-silo/integration-tests/mock_token/src/: lib.rs
silo-to-silo/integration-tests/src/: lib.rs
silo-to-silo/utils/: scripts.js
sim-tests/: Cargo.toml
sim-tests/tests/: token_transfer.rs
test/: connector.test.js
token-locker/: .catalog-info.yaml  Cargo.toml  build.sh
token-locker/src/: lib.rs  token_receiver.rs  unlock_event.rs  whitelist.rs
token-locker/tests/: event_serialization.rs
