[package]
name = "bridge-aurora-token-factory"
version = "0.1.5"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
tiny-keccak = "1.4.0"
ethabi = "12"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uint = { version = "0.8.3", default-features = false }
rlp = "0.4.2"
hex = "0.4.2"
aurora-engine-parameters = { path = "../aurora-engine-parameters", default-features = false }

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
test-token = { git = "https://github.com/mfornet/contracts", rev = "9e115e54bec56842d1380c6ebdd884eab3170583" }
bridge-token = { path = "../bridge-token" }
mock-prover = { path = "../mock-prover" }
lazy_static = "1.4.0"
rand = "0.7.3"

# [features]
# default = ["std"]
# std = ["borsh/std", "primitive-types/std", "rlp/std", "sha3/std", "ethabi/std"]
# [dependencies]
# near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
# near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
# eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
# admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "9ffb08e6613788096f26636f695b4c7e5fa5b261" }
# tiny-keccak = "1.4.0"
# ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std", default-features = false }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# uint = { version = "0.8.3", default-features = false }
# rlp = { version = "0.5.0", default-features = false }
# hex = "0.4.2"
# primitive-types = { version = "0.10.0", default-features = false, features = ["rlp"] }
# aurora-engine-parameters = { path = "../aurora-engine-parameters", default-features = false }
# sha3 = { version = "0.9.1", default-features = false }

# [dev-dependencies]
# near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", rev = "613adcab6322e4f830efb4d5bde2a810ae642158" }
# test-token = { git = "https://github.com/mfornet/contracts", rev = "9e115e54bec56842d1380c6ebdd884eab3170583" }
# bridge-token = { path = "../bridge-token" }
# lazy_static = "1.4.0"
# rand = "0.7.3"
