[package]
name = "bridge-common"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "4abc8d9b28d4a9a62b90d35147218a9d08f6721b" }
ethabi = "12.0.0"
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "3.1.0" }
tiny-keccak = "1.4.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rlp = "0.4.2"
hex = "0.4.2"
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "4abc8d9b28d4a9a62b90d35147218a9d08f6721b" }
