[package]
name = "bridge-common"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "8644d02031250470556b07fdf3506f13357eb8b7" }
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "8644d02031250470556b07fdf3506f13357eb8b7" }
ethabi = "12.0.0"
near-sdk = "4.0.0"
tiny-keccak = "1.4.0"
rlp = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"

[features]
default = ["result_with_prefix"]
result_with_prefix = []