[package]
name = "bridge-token-factory"
version = "0.1.5"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "67966a151122815039f07b02065ab3a2bba09804" }
admin-controlled = { git = "https://github.com/near/rainbow-bridge", rev = "67966a151122815039f07b02065ab3a2bba09804" }
ethabi = "12.0.0"
bridge-common = { path = "../bridge-common", default-features = false }
hex = "0.4.2"
bridge-token = { path = "../bridge-token" }

[dev-dependencies]
uint = { version = "0.8.3", default-features = false }
rand = "0.7.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
workspaces = "0.4.0"
tokio = { version = "1.1", features = ["rt", "macros"] }
anyhow = "*"

[patch]
[patch.crates-io]
eth2_hashing = { git = "https://github.com/near/rainbow-bridge", rev = "67966a151122815039f07b02065ab3a2bba09804" }