[package]
name = "bridge-token-factory"
version = "0.2.3"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "4.1.0"
near-contract-standards = "4.0.0"
ethabi = "12.0.0"
bridge-common = { path = "../bridge-common", default-features = false }
hex = "0.4.2"
bridge-token = { path = "../bridge-token" }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.1.0" }

[dev-dependencies]
uint = { version = "0.8.3", default-features = false }
rand = "0.7.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-workspaces = "0.8.0"
tokio = { version = "1.1", features = ["rt", "macros"] }
anyhow = "*"
