[package]
name = "rainbow-bridge-near-token-locker"
version = "0.2.0"
authors = ["Pagoda <hello@pagoda.co>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "4.1.0"
near-contract-standards = "4.0.0"
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "67966a151122815039f07b02065ab3a2bba09804" }
tiny-keccak = "1.4.0"
ethabi = "12.0.0"
hex = "0.4.2"
bridge-common = { path = "../bridge-common" }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", rev = "93e1a30d79e72d51c4349ba71d454865c76ac690" }

[dev-dependencies]
uint = { version = "0.8.3", default-features = false }
serde_json = "1.0"
rand = "0.7.3"

[features]
default = ["migrate_icon"]
migrate_icon = []

[patch]
[patch.crates-io]
eth2_hashing = { git = "https://github.com/near/rainbow-bridge", rev = "67966a151122815039f07b02065ab3a2bba09804" }