[package]
name = "silo-to-silo-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-sdk-integration-tests = { git = "https://github.com/aurora-is-near/aurora-contracts-sdk.git", rev = "fb81299792200d21ffc26fcc43ad5f0794fd928d" }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
