[package]
name = "aurora-sdk-integration-tests"
description = "Rust library for writing integration tests for NEAR smart contracts interacting with the Aurora Engine."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "cd4e046699a72cab0adf02bb5d7c47783732cf1b", default-features = false, features = ["std", "borsh-compat"] }
aurora-engine-precompiles = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "cd4e046699a72cab0adf02bb5d7c47783732cf1b", default-features = false, features = ["std", "borsh-compat"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "cd4e046699a72cab0adf02bb5d7c47783732cf1b", default-features = false, features = ["std", "borsh-compat"] }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "cd4e046699a72cab0adf02bb5d7c47783732cf1b" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", rev = "cd4e046699a72cab0adf02bb5d7c47783732cf1b", default-features = false, features = ["std", "borsh-compat"] }
base64 = "0.21"
ethabi = "18"
hex = "0.4"
near-sdk = "4.1.0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
workspaces = "0.7"
